--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -11,9 +11,9 @@ include components/btn.pug
 
 
 mixin arrow()
-	.swiper-button-hand.swiper-button-hand-prev.swiper-button-prev
+	.swiper-prev
 		+icon('arrow-circle-l')
-	.swiper-button-hand.swiper-button-hand-next.swiper-button-next
+	.swiper-next
 		+icon('arrow-circle-r')
 //- /arrow for swiper-slider
 
