--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -72,6 +72,9 @@ $yellow: #f0c104;
 $green: #198754 !default;
 $teal: #20c997 !default;
 $cyan: #0dcaf0 !default;
+
+$light-blue: #9aafc5;
+$light-blue2: #9aaec5;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -98,7 +101,6 @@ $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
-$light-blue: #9aafc5;
 $dark: $gray-900 !default;
 // scss-docs-end theme-color-variables
 
@@ -469,7 +471,7 @@ $line-height-sm: 1.25 !default;
 $line-height-lg: 2 !default;
 
 $h1-font-size: $font-size-base * 2.5 !default;
-$h2-font-size: $font-size-base * 2 !default;
+$h2-font-size: rem(40);
 $h3-font-size: $font-size-base * 1.75 !default;
 $h4-font-size: $font-size-base * 1.5 !default;
 $h5-font-size: $font-size-base * 1.25 !default;
@@ -489,8 +491,8 @@ $font-sizes: (1: $h1-font-size,
 $headings-margin-bottom: $spacer / 2 !default;
 $headings-font-family: null !default;
 $headings-font-style: null !default;
-$headings-font-weight: 500 !default;
-$headings-line-height: 1.2 !default;
+$headings-font-weight: 700 !default;
+$headings-line-height: (51.5/40) !default;
 $headings-color: null !default;
 // scss-docs-end headings-variables
 
