--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -3,6 +3,8 @@ extends layout/main.pug
 
 include ../blocks/sContent/_sContent.pug
 include ../blocks/sContact/_sContact.pug
+include ../blocks/sQuiz/_sQuiz.pug
+include ../blocks/sCatalog/_sCatalog.pug
 
 block variables
 	- let  mainPage= null 
@@ -16,6 +18,8 @@ block pagecontent
 	//-+header()
 	+top-nav()
 	+headerBlock()
+	+sQuiz()
+	+sCatalog()
 	//+soc()
 	//a(href="#modal-call").link-modal-js фывфывфыв
 	////- img(src="img/", alt="")
