--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -1,7 +1,7 @@
 mixin sCatalog(data)
 	// start sCatalog
 	+b.SECTION.sCatalog--js.section#sCatalog&attributes(attributes)
-		.container
+		+e.container.container
 			+b.section-title.text-center
 				h2 Каталог продукции
 				p Виды шкафов
