--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,43 +1,66 @@
 .footer {
-		
-	margin-top: auto;
+	padding: rem(35) 0 rem(50);
+	@include media-breakpoint-up(lg){
+		padding: rem(50px) 0 rem(150);
+	}
 
-// 
-@include media-breakpoint-up(xl) {}
+	background-color: $primary;
+	&__row{
+		--bs-gutter-x: #{rem(10)};
+	}
+	&__logo{
+		display: block;
+		width: rem(286);
+		margin-bottom: 3px;
 
-@include media-breakpoint-up(lg) {}
-
-@include media-breakpoint-up(md) {}
-
-@include media-breakpoint-up(sm) {}
-
-@include media-breakpoint-up(xs) {}
-
-
-// 
-@include media-breakpoint-between(md, xl) {}
-
-
-// 
-@include media-breakpoint-only(xs) {}
-
-@include media-breakpoint-only(sm) {}
-
-@include media-breakpoint-only(md) {}
-
-@include media-breakpoint-only(lg) {}
-
-@include media-breakpoint-only(xl) {}
-
-
-// 
-@include media-breakpoint-down(xl) {}
-
-@include media-breakpoint-down(lg) {}
-
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
-
-@include media-breakpoint-down(xs) {}
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+		}
+	}
+	&__logo-txt{
+		color: $light-blue;
+		font-size: rem(17);
+		margin-bottom: rem(25);
+	}
+	&__location{
+		display: inline-block;
+		padding-bottom: rem(12);
+		border-bottom: 1px solid $gray-450;
+		max-width: rem(244);
+	}
+	&__l-row{
+		--bs-gutter-x: #{rem(8)};
+	}
+	&__l-icon-col{
+		.icon{
+			font-size: rem(18);
+			color: $white;
+		}
+	}
+	&__loc-txt{
+		color: $white;
+		font-size: rem(16);
+		line-height: (19/16);
+	}
+	//
+	&__sub-row{
+		--bs-gutter-x: #{rem(10px)};
+	}
+	&__tel{
+		color: $white!important;
+		font-size: rem(33);
+		font-weight: 700;
+		text-decoration: none;
+	}
+	&__btn{
+		@extend .btn-yellow;
+		@include media-breakpoint-up(xl){
+			margin-left: rem(7);
+		}
+	}
+	//
+	&__{}
+	&__{}
 }
