--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -59,24 +59,6 @@
 		font-weight: 700;
 		line-height: (51.48/33);
 	}
-	&__soc-row{
-		--bs-gutter-x: #{rem(5)};
-		--bs-gutter-y: #{rem(5)};
-	}
-	&__soc{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		width: rem(27);
-		height: rem(27);
-		img{
-			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 100%;
-		}
-	}
 	&__btn{
 		@extend .btn-yellow;
 		position: relative;
@@ -91,4 +73,22 @@
 	&__{}
 }
 
+.soc-row{
+	--bs-gutter-x: #{rem(5)};
+	--bs-gutter-y: #{rem(5)};
 
+	&__item{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		width: rem(27);
+		height: rem(27);
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+}
